--- a/login.html
+++ b/login.html
@@ -3,16 +3,16 @@
 <head>
 <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-	<title>Sign Up!</title>
+  <title>Log In!</title>
 </head>
 <body>
-<h1> Sign Up! </h1>
-<form action="/submit" method="post">
+<h1> Log In! </h1>
+<form action="/add" method="post">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
   
     <input type="submit">
-  	</form>
+    </form>
 
 
 </body>
