--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Sign Up! </h1>
-<form action="/submit" method="post">
+<form action="/add" method="post">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
   
