--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1> Log In! </h1>
-<form action="/add" method="post">
+<form action="/auth" method="post">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
   
